2009-09-04  Jie Zhang  <jie.zhang@analog.com>

	* doc/all.texi: Replace BFIN with Blackfin.
	* doc/as.texinfo: Likewise.
	* doc/c-bfin.texi: Likewise.
	* doc/asconfig.texi: Likewise.

	* doc/c-bfin.texi: Update -mcpu= option with bf512, bf514,
	bf516 and bf518.

2009-09-04  Jie Zhang  <jie.zhang@analog.com>

	* Makefile.am (bfin-parse.o): Remove bfin-parse.h from
	the prerequisite. Add $(srcdir)/config/bfin-aux.h to the
	prerequisite.
	(bfin-defs.h, $(srcdir)/config/bfin-defs.h): Rename to ...
	(bfin-parse.h, $(srcdir)/config/bfin-parse.h): ... these. 
	(bfin-lex.o): Add bfin-parse.h and $(srcdir)/config/bfin-defs.h
	to the prerequisite.
	* Makefile.in: Regenerate.

2009-09-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.am (itbl-lex.o): Depend on itbl-parse.h.
	(itbl-ops.o, itbl-tops.o): Likewise.
	(itbl-parse.h): Use separate rule.
	* Makefile.in: Regenerate.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* config/tc-bfin.c (md_parse_option): Call as_fatal for bad
	-mcpu= option.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-lex.l: Remove V as STATUS_REG.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-parse.y: Remove trailing whitespace.
	(ccstat): Indent.
	* config/tc-bfin.c (struct bfin_reg_entry): Remove.
	(bfin_reg_info[]): Remove.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-defs.h (F_REG_ALL): Remove macro.
	(F_REG_HIGH): Redefine.
	(F_REG_NONE): New macro.
	(F_REG_LOW): New macro.
	(REG_CLASS): Enclose macro argument in parentheses when used.
	(REG_EVEN): Likewise.
	(IS_H): Use flags.
	(IS_HCOMPL): Use flags.
	* config/bfin-lex.l (SP.L, SP.H, FP.L, FP.H): Set flags.
	(parse_reg): Set flags.
	(parse_halfreg): Set flags.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-parse.y (gen_multi_instr_1): Check anomaly
	05000074 only when both slot1 and slot2 are filled.

2009-09-03  Jie Zhang  <jie.zhang@analog.com>

	* config/tc-bfin.c (md_assemble): Bump line counters if there is